# humanize-zh

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  cli.md  migration.md  plan-multilang.md  providers.md  sdk.md
examples/: 01_detect_only.py  02_polish_with_llm.py  03_iterative_loop.py  04_inject_rules_into_prompt.py  README.md
humanize_zh/: README.md  __init__.py  _format.py  combined.py  detect.py  iterative.py  judge.py  ngram_check.py  patterns.json  postprocess.py  prompt.py
humanize_zh/_core/: __init__.py  language_registry.py  prompt.py  protocols.py
humanize_zh/_lang/zh/: detector.py  ngram.py  profile.py  prompts.py  replacements.py
humanize_zh/_lang/zh/data/: replacements.json  rules.json
humanize_zh/cli/: __init__.py  __main__.py  main.py
humanize_zh/llm/: __init__.py  _resolve.py  anthropic_provider.py  base.py  callable_provider.py  openai_compat.py  openai_provider.py  registry.py
humanize_zh/web/: __init__.py  __main__.py  _security.py  app.py
humanize_zh/web/templates/: _detect_result.html  _error.html  _judge_result.html  _loading_skel.html  _loop_result.html  _oneshot_result.html  _polish_result.html  base.html  index.html
tests/: _regression_score.py  conftest.py  test_cli.py  test_combined.py  test_detect.py  test_en_dry_run.py  test_helpers.py  test_iterative.py  test_judge.py  test_llm.py  test_ngram_check.py  test_postprocess.py  test_prompt.py  test_protocols.py  test_providers.py  test_regression_templeluck.py  test_web.py
