[project]
name = "humanize-zh"
version = "0.1.0a1"
description = "Chinese AI text humanization library — detect / polish / judge with rule + ngram + LLM"
authors = [{ name = "song" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["ai-detection", "chinese", "humanize", "ngram", "llm", "deepseek", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.40.0"]
ui = ["fastapi>=0.115.0", "jinja2>=3.1.0", "uvicorn>=0.30.0", "python-multipart>=0.0.9"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.7.0",
    "mypy>=1.10",
]
all = ["humanize-zh[openai,anthropic,ui]"]

[project.scripts]
humanize = "humanize_zh.cli.main:main"

[project.urls]
Repository = "https://github.com/song/humanize-zh"
Issues = "https://github.com/song/humanize-zh/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["humanize_zh"]

[tool.hatch.build.targets.wheel.force-include]
"humanize_zh/data" = "humanize_zh/data"
"humanize_zh/patterns.json" = "humanize_zh/patterns.json"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=humanize_zh --cov-report=term-missing"
