[project]
name = "humanize-zh"
version = "0.1.0a1"
description = "Chinese AI text humanization library — detect / polish / judge with rule + ngram + LLM"
authors = [{ name = "song" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["ai-detection", "chinese", "humanize", "ngram", "llm", "deepseek", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.40.0"]
ui = ["fastapi>=0.115.0", "jinja2>=3.1.0", "uvicorn>=0.30.0", "python-multipart>=0.0.9"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.7.0",
    "mypy>=1.10",
    "httpx>=0.27",  # for FastAPI TestClient
]
all = ["humanize-zh[openai,anthropic,ui]"]

[project.scripts]
humanize-zh = "humanize_zh.cli.main:main"

[project.urls]
Repository = "https://github.com/song/humanize-zh"
Issues = "https://github.com/song/humanize-zh/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["humanize_zh"]

[tool.hatch.build.targets.wheel.force-include]
"humanize_zh/_lang/zh/data" = "humanize_zh/_lang/zh/data"
"humanize_zh/patterns.json" = "humanize_zh/patterns.json"
"humanize_zh/web/templates" = "humanize_zh/web/templates"

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["humanize_zh/_lang/zh/data/_ngram_engine.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=humanize_zh --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["humanize_zh"]
omit = [
    "humanize_zh/_lang/zh/data/_ngram_engine.py",  # third-party embedded module
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.mypy]
# Incremental strict: enforce types where they exist, do not yet require
# annotations on every function. New code MUST be fully typed; legacy helpers
# (detect.py, ngram_check.py internals) can be migrated gradually.
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
disallow_any_generics = false
exclude = [
    "humanize_zh/_lang/zh/data/_ngram_engine.py",
    "tests/",
    "build/",
    "dist/",
]

# Public-facing API: full strict
[[tool.mypy.overrides]]
module = [
    "humanize_zh.llm.*",
    "humanize_zh.postprocess",
    "humanize_zh.judge",
    "humanize_zh.cli.*",
    "humanize_zh.web.*",
]
disallow_untyped_defs = true
warn_return_any = true

[[tool.mypy.overrides]]
# Optional dependencies: don't fail when extras not installed
module = ["openai.*", "anthropic.*"]
ignore_missing_imports = true
